...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/novaBiljkaBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="Nova biljka" />
...
